# qt-mandelbrot

./: CMakeLists.txt  README.md  colors.cpp  colors.h  core.cpp  core.h  graphic_engine.cpp  graphic_engine.h  main.cpp  processing_area.cpp  processing_area.h
